--- a/设计模式/template/demo.html
+++ b/设计模式/template/demo.html
@@ -40,7 +40,7 @@
 
     var CoffeeWithHook = function () {
     };
-    //基于原型 实现集成
+    //基于原型 实现继承
     CoffeeWithHook.prototype = new Beverage();
     CoffeeWithHook.prototype.brew = function () {
         console.log('用沸水冲泡咖啡');
@@ -51,6 +51,7 @@
     CoffeeWithHook.prototype.addCondiments = function () {
         console.log('加糖和牛奶');
     };
+    //钩子方法
     CoffeeWithHook.prototype.customerWantsCondiments = function () {
         return window.confirm('请问需要调料吗？');
     };
